--- a/contact1.html
+++ b/contact1.html
@@ -46,7 +46,7 @@ padding:5PX;
     </div>
     <ul class="nav navbar-nav">
 	
-      <li ><a href="slide.html"><strong>Home</strong></a></li>
+      <li ><a href="index.html"><strong>Home</strong></a></li>
       <li><a href="about1.html"><strong>About</strong></a></li>
       <li class="active"><a href="Contact1.html"><strong>contact</strong></a></li>
 	  <li><a href="gallery1.html"><strong>Gallery</strong></a><li>
