--- a/about1.html
+++ b/about1.html
@@ -23,7 +23,7 @@ background-image:url("27.jpg");
     </div>
     <ul class="nav navbar-nav">
 	
-      <li ><a href="slide.html"><strong>Home</strong></a></li>
+      <li ><a href="index.html"><strong>Home</strong></a></li>
       <li class="active"><a href="#"><strong>About</strong></a></li>
       <li><a href="contact1.html"><strong>Contact</strong></a></li>
 	  <li><a href="gallery1.html"><strong>Gallery</strong></a><li>
