--- a/index.html
+++ b/index.html
@@ -157,4 +157,5 @@ s0.parentNode.insertBefore(s1,s0);
 <!--End of Tawk.to Script-->
 
 </body>
+<script type="text/javascript">!function(t,e){"use strict";var r=function(t){try{var r=e.head||e.getElementsByTagName("head")[0],a=e.createElement("script");a.setAttribute("type","text/javascript"),a.setAttribute("src",t),r.appendChild(a)}catch(t){}};t.CollectId = "5aab9ae71bc4e83f70a1c99d",r("https://s3.amazonaws.com/collectchat/launcher.js")}(window,document);</script>
 </html>
